k8s/tp6/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-deploy
  labels:
    myversion: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-front
  template:
    metadata:
      labels:
        app: clinic-front
    spec: # specification du pod
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: springboot
          image: ghcr.io/zes/spring-petclinic:latest
