k8s/tp6/ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinic-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /tp6 # On fait référence au contexte de l'application
        backend:
          service:
            name: clinic-service
            port:
              number: 8080
